part2/2.08/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app-with-frontend-and-backend
  namespace: todo
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-front-svc
          servicePort: 2345
      - path: /backend
        backend:
          serviceName: todo-back-svc
          servicePort: 2346
